public/stylesheets/snorby.css
/* ... */
.more{
	background-color: white;
	background-image: url(../images/more.gif);
	background-position-x: 0%;
	background-position-y: 0%;
	background-repeat: repeat-x;
	border-bottom: 1px solid rgb(170, 170, 170);
	border: 1px solid #cfcfcf;
	border-right: 1px solid rgb(170, 170, 170);
	display: block;
	font-size: 14px;
	height: 22px;
	line-height: 1.5em;
	outline: none;
	padding: 6px 0px;
	text-align: center;
	text-shadow: rgb(255, 255, 255) 1px 1px 1px;
	width: 100%;
}

.more.loading {
	cursor: default!important;
	background-color: #fff;
	background-repeat: no-repeat;
	background-position: 50% 50%;
	border: 1px solid #eee;
	background-image: url('../images/ajax.gif');
}

.more::-moz-focus-inner {
	border: 0;
}

#pagination {
	margin: auto;
}

.pagination{
	font-size: small;
}

/* @end */

/* @group Events */

/* Events */

strong.title{
	font-weight: normal;
	text-decoration: none;
	font-variant: normal;
	font-style: normal;
	font-size: 1em;
}

.event{
	margin-bottom: 10px;
}

#events{
	padding-bottom: 1px;
}

#events a{
	font-size: small;
}

#event_holder{
	background-color: #efefef;
	border: 1px solid #dcdcdc;
	padding: 5px;
}

#event_holder_body{
	font-size: small;
	color: #7f7f7f;
}

#event_timestamp{
	float: right;
	font-size: small;
	color: #ababab;
}

#event_show_information{
	color: #636363;
}

/* Show Page For Events */

#event_show_page a{
	font-size: x-small;
}

strong.event_title{
	font-size: large;
	color: #262626;
}

#summary_info_in {
	border: 5px solid #eee;
	overflow: hidden;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
}

#summary_info table {
	text-align: left;
	width: 100%;
}

#summary_info td {
	padding: 2px 30px 2px 20px;
	text-align: left;
}

#summary_info tr {
	border-bottom: 1px solid #f2f2f2;
	text-align: left;
}

#summary_info th {
	padding: 2px 30px 2px 15px;
	color: #464546;
	background-color: #eee;
	font-size: x-small;
}

/* @end */

/* @group IP Info */

#ip_info_in {
	border: 5px solid #eee;
	overflow: hidden;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
}

#ip_info_in_more {
	border: 5px solid #eee;
	overflow: hidden;
	margin-top: 10px;
}

#ip_info table {
	text-align: left;
	width: 100%;
}

#ip_info td {
	padding: 2px 30px 2px 20px;
	text-align: left;
}

#ip_info tr {
	border-bottom: 1px solid #f2f2f2;
	text-align: left;
}

#ip_info th {
	padding: 2px 30px 2px 15px;
	color: #464546;
	background-color: #eee;
	font-size: x-small;
}


/* @end */

/* @group TCP Info */



/* @end */

/* @group ICMP Info */

#icmp_info_in {
	border: 5px solid #eee;
	overflow: hidden;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
}

#icmp_info table {
	text-align: left;
	width: 100%;
}

#icmp_info td {
	padding: 2px 30px 2px 20px;
	text-align: left;
}

#icmp_info tr {
	border-bottom: 1px solid #f2f2f2;
	text-align: left;
}

#icmp_info th {
	padding: 2px 30px 2px 15px;
	color: #464546;
	background-color: #eee;
	font-size: x-small;
}




/* @end */

/* @group UDP Info */



/* @end */

/* @group Code/Payload */

pre {
	font: small Courier;
}

#ascii_payload{
	-webkit-border-radius: 4px;
	-moz-border-radius: 5px;
	overflow: auto;
	background-color: #eee;
	padding: 10px;
	font-size: medium;
	color: #000;
	margin: 10px 10px 0;
	border: 3px solid #e4e4e4;
}

#ascii_hex_payload{
	-webkit-border-radius: 4px;
	-moz-border-radius: 5px;
	overflow: auto;
	background-color: #eee;
	padding: 10px;
	font-size: medium;
	color: #000;
	margin: 10px 10px 0;
	border: 3px solid #e4e4e4;
}

#raw_payload{
	-webkit-border-radius: 4px;
	-moz-border-radius: 5px;
	overflow: auto;
	background-color: #eee;
	font-size: medium;
	color: #000;
	margin: 10px 10px 0;
	border-width: 1px;
	border-color: #828282;
	border: 3px solid #e4e4e4;
	text-align: left;
	padding: 10px 10px 10px 20px;
}

#payload_title{
	color: #7e7e7e;
	margin-bottom: 10px;
	text-align: right;
}

/* @end */

/* @group DashBoard */


#dashboard{
	overflow: hidden;
}

#graph_holder{
	margin-bottom: 30px;
	text-align: center;
	overflow: hidden;
	width: 100%;
	margin-left: -25px;
}

#data_count_holder{
	background-color: rgba(171,171,171,0.14);
	border: 1px solid rgba(192,192,192,0.63);
	position: relative;
	overflow: hidden;
	width: 100%;
	margin: auto;
	padding-top: 10px;
	padding-bottom: 10px;
}

#dash_top{
	width: 260px;
	background-image: url(../images/dashboard/dash_top.png);
	height: 20px;
}

#dash_top h2{
	padding-left: 15px;
	padding-top: 5px;
	font-size: medium;
	color: #2f2f2f;
}

#dash_content{
	width: 260px;
	background: url(../images/dashboard/dash_content.png) repeat-y;
	padding-top: 10px;
	padding-left: 20px;
	color: #505050;
	font-size: small;
	min-height: 120px;
}

#dash_bottom{
	width: 260px;
	background-image: url(../images/dashboard/dash_bottom.png);
	height: 20px;
}

#dash_holder_first{
	width: 260px;
	padding: 5px;
	margin-right: 3px;
}

#dash_holder{
	width: 260px;
	float: right;
	margin-right: 10px;
}

#g_dash_holder_first{
	width: 260px;
	padding: 5px;
}

#g_dash_holder{
	width: 260px;
	float: right;
	padding: 5px;
	margin-right: 5px;
}

#dashboard{
	position: relative;
	overflow: visible;
}

/* @group Dash Table */


#statistics{
	position: relative;
	overflow: hidden;
	margin-bottom: 25px;
	padding-right: 20px;
	padding-left: 20px;
}

.grid_1{
	width: 380px;
	float: left;
}

.grid_2{
	width: 380px;
	float: right;
}

#dash_table_in {
	border: 5px solid #eee;
	overflow: hidden;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
}

#dash_table table {
	text-align: left;
	width: 100%;
}

#dash_table td {
	padding: 2px 30px 2px 20px;
	text-align: left;
}

#dash_table tr {
	border-bottom: 1px solid #f2f2f2;
	text-align: left;
}

#dash_table th {
	padding: 2px 30px 2px 15px;
	color: #464546;
	background-color: #eee;
	font-size: x-small;
}

/* @end */

/* @end */

/* @group LOGIN */

#logo_big{
	text-align: center;
	margin-bottom: 20px;
}

#login{
	width: 600px;
	margin-bottom: auto;
	margin-left: auto;
	margin-right: auto;
}
/* ... */

